force-app/main/default/objects/Payment_Arrangement__c/Payment_Arrangement__c.object-meta.xml
<CustomObject>
    <label>Payment Arrangement</label>
    <nameField>
        <displayFormat>PAY-{000000000}</displayFormat>
        <label>Payment Arrangement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Arrangements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>