force-app/main/default/objects/Payment_Arrangement__c/fields/In_Network_Coinsurance_text__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Coinsurance_text__c</fullName>
    <label>In Network Coinsurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>