force-app/main/default/objects/Payment_Arrangement__c/fields/In_Network_Ind_Ded_Met__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Ind_Ded_Met__c</fullName>
    <label>In Network Ind Ded Met</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>