force-app/main/default/objects/Payment_Arrangement__c/fields/Insurance_Reimbursement_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Reimbursement_Type__c</fullName>
    <label>Insurance Reimbursement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Co-Pay</fullName>
            </value>
            <value>
                <fullName>Cash Rate/No OON- w/ insurance</fullName>
                <label>Cash Rate/No OON - w/ insurance</label>
            </value>
            <value>
                <fullName>Cash Pay/No OON - w/o insurance</fullName>
            </value>
            <value>
                <fullName>Cash Rate/High Deductible- w/ insurance</fullName>
            </value>
            <value>
                <fullName>Cash Pay/High Deductible - w/o insurance</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>PIP/MVA</fullName>
            </value>
            <value>
                <fullName>WC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>