force-app/main/default/objects/Payment_Arrangement__c/fields/Insurance_Verification__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Verification</label>
    <referenceTo>Insurance_Verification__c</referenceTo>
    <relationshipLabel>Payment Arrangements</relationshipLabel>
    <relationshipName>Payment_Arrangements</relationshipName>
    <type>Lookup</type>
</CustomField>