force-app/main/default/objects/Payment_Arrangement__c/fields/Out_of_Network_Coinsurance_text__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Network_Coinsurance_text__c</fullName>
    <label>Out of Network Coinsurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>