force-app/main/default/objects/Payment_Arrangement__c/fields/PA_Complete__c.field-meta.xml
<CustomField>
    <fullName>PA_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA Complete</label>
    <type>Checkbox</type>
</CustomField>