force-app/main/default/objects/Payment_Arrangement__c/fields/PA_Created_By__c.field-meta.xml
<CustomField>
    <fullName>PA_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PA Created By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Arrangements</relationshipLabel>
    <relationshipName>Payment_Arrangements</relationshipName>
    <type>Lookup</type>
</CustomField>