force-app/main/default/objects/Payment_Arrangement__c/fields/Patient_Account__c.field-meta.xml
<CustomField>
    <fullName>Patient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Arrangements</relationshipLabel>
    <relationshipName>Payment_Arrangements</relationshipName>
    <type>Lookup</type>
</CustomField>