force-app/main/default/objects/Payment_Arrangement__c/fields/Payment_Arrangement_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement_Accepted__c</fullName>
    <label>Payment Arrangement Accepted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>