force-app/main/default/objects/Payment_Arrangement__c/fields/Payment_Arrangement_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement_Created_By__c</fullName>
    <label>Payment Arrangement Created By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ashley D</fullName>
            </value>
            <value>
                <fullName>Colleen R</fullName>
            </value>
            <value>
                <fullName>Jennifer S</fullName>
            </value>
            <value>
                <fullName>Jessica A</fullName>
            </value>
            <value>
                <fullName>Kriten H</fullName>
            </value>
            <value>
                <fullName>Rebecca S</fullName>
            </value>
            <value>
                <fullName>Valerie C</fullName>
            </value>
            <value>
                <fullName>Nicole Cunicella</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>