force-app/main/default/objects/Payment_Arrangement__c/fields/Payment_Arrangement_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement_Details__c</fullName>
    <label>Payment Arrangement Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>