force-app/main/default/objects/Payment_Arrangement__c/fields/Potential_Patient__c.field-meta.xml
<CustomField>
    <fullName>Potential_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Potential Patient</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Payment Arrangements</relationshipLabel>
    <relationshipName>Payment_Arrangements</relationshipName>
    <type>Lookup</type>
</CustomField>