force-app/main/default/objects/Payment_Arrangement__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Urgent/Same Day</fullName>
            </value>
            <value>
                <fullName>2 - Verify First</fullName>
            </value>
            <value>
                <fullName>3 - Urgent/Next Day</fullName>
            </value>
            <value>
                <fullName>4 - Regular Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>