force-app/main/default/objects/Payment_Arrangement__c/fields/Reimbursement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Rate__c</fullName>
    <label>Reimbursement Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>