force-app/main/default/objects/Payment_Arrangement__c/fields/Reimbursement_Type__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Type__c</fullName>
    <label>Reimbursement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MCR</fullName>
            </value>
            <value>
                <fullName>UCR</fullName>
            </value>
            <value>
                <fullName>FH</fullName>
            </value>
            <value>
                <fullName>R+C</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>MNRP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>