force-app/main/default/objects/Payment_Arrangement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Potential_Patient__c</columns>
    <columns>NAME</columns>
    <columns>Office__c</columns>
    <columns>Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PA_Created_By__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>