force-app/main/default/objects/Payment_Arrangement__c/listViews/Completed_Payment_Arrangements.listView-meta.xml
<ListView>
    <fullName>Completed_Payment_Arrangements</fullName>
    <columns>Potential_Patient__c</columns>
    <columns>NAME</columns>
    <columns>Office__c</columns>
    <columns>Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PA_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PA_Complete__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>2 - COMPLETED Payment Arrangements</label>
</ListView>